# aperion-event-bus

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  stability_harness.py
benchmarks/: benchmark_throughput.py
ref/: GAP_ANALYSIS.md  best_practices.md  known_bugs.md  otel_integration.md  pii_patterns.md  sources.md
src/aperion_event_bus/: __init__.py  audit.py  bus.py  correlation.py  dlq.py  events.py  metrics.py  telemetry.py  validation.py
tests/: conftest.py  test_core.py  test_correlation.py  test_dlq.py  test_milestone1.py  test_milestone2.py  test_redactor.py
tests/integration/: __init__.py  test_fastapi.py
tests/stability/: test_event_bus_stability.py
